Added code changes to clone regimen, added link regimen modal, updated links within application, added stability related changes

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -50,3 +50,13 @@ li a:hover {
   float: right;
 }
 
+
+.spinner {
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto; /* presto! */
+}
+
