--- a/src/app/components/regimendetails/regimendetails.component.scss
+++ b/src/app/components/regimendetails/regimendetails.component.scss
@@ -74,3 +74,17 @@ mat-form-field.reference-input {
   display: flex;
   justify-content: flex-start;
 }
+
+.card-header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.spinner {
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto; /* presto! */
+}
