--- a/src/app/modals/editregimendetail/editregimen.component.html
+++ b/src/app/modals/editregimendetail/editregimen.component.html
@@ -1,7 +1,8 @@
 <div class="modal-dialog">
   <div class="modal-content">
     <div class="modal-header">
-      <h4 class="modal-title pull-left">Edit Regimen Details</h4>
+      <h3 *ngIf="regimenDetail?.id" class="modal-title pull-left">Edit {{regimenDetail.dispName}}</h3>
+      <h3 *ngIf="!regimenDetail?.id" class="modal-title pull-left">Add New Regimen</h3>
       <button type="button" class="close pull-right" aria-label="Close" (click)="close($event)">
         <span aria-hidden="true">&times;</span>
       </button>
