fix minor bugs, fixed add regimen to retain regimen type and cancer id

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,6 +19,7 @@
 
 
 <app-addpatienttypes [config]="{ show: false }" bsModal
-                     #addModal="bs-modal"
+                     #addPatientModal="bs-modal"
                      (yes)="addPerson($event)"
+                     (cancel)="hideAddPatientModal()"
                      class="modal fade"></app-addpatienttypes>
