fix minor bugs on delete && add patient, added changes to regimen details screen to show cancer name on the regimen.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,6 +20,6 @@
 
 <app-addpatienttypes [config]="{ show: false }" bsModal
                      #addPatientModal="bs-modal"
-                     (yes)="addPerson($event)"
+                     (yes)="addPatient($event)"
                      (cancel)="hideAddPatientModal()"
                      class="modal fade"></app-addpatienttypes>
