--- a/src/app/components/regimendetails/regimendetails.component.scss
+++ b/src/app/components/regimendetails/regimendetails.component.scss
@@ -13,6 +13,7 @@ mat-expansion-panel-header {
   flex: 0 32%;
   justify-content: space-between;
   height: 60px !important;
+  width: 100%
 }
 
 .regimen-detail-header-schedule {
