--- a/src/app/modals/link-cancer-regimen-modal/link-cancer-regimen-modal.scss
+++ b/src/app/modals/link-cancer-regimen-modal/link-cancer-regimen-modal.scss
@@ -1,16 +1,16 @@
+.size-60-p {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .level-type-component {
   z-index: 2;
 }
 
-.modal-dialog {
-  /* 100% = dialog height, 120px = header + footer */
-  height: 80vh !important;
-  width: 70% !important;
-  max-width: 90% !important;
-}
-
-.modal-body {
-  height: 60vh;
+.body {
   display: flex;
   width: 100% !important;
 }
@@ -23,13 +23,11 @@
 .regimen-list {
   overflow-y: scroll;
   display: flex;
-  height: 3.8% !important;
 }
 
 .existing-regimen-list {
   overflow-y: scroll;
   display: flex;
-  height: 12% !important;
 }
 .group:after {
   content: "";
@@ -44,4 +42,61 @@
   right: 0;
   bottom: 0;
   margin: auto; /* presto! */
+}
+
+.content {
+  height: 600px;
+  width: 80%;
+  background: white;
+  display: flex;
+  flex-direction: column;
+}
+
+.regimen-search {
+  border: dot-dash 1px;
+}
+.body {
+  flex-grow: 2;
+  height: 400px;
+}
+
+.footer {
+  flex-grow: 1;
+}
+
+.header {
+  display: flex;
+  background: #0b5dab;
+  justify-content: space-between;
+  color: white;
+  text-align: center;
+  align-items: baseline;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.modal-title {
+
+}
+.overflow-scroll {
+  overflow: scroll;
+}
+.regimen-list {
+  height: 400px;
+  overflow: scroll;
+}
+
+.regimen-list-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  border: solid 1px darkorange;
+}
+
+.regimen-list-heading {
+  text-align: center  ;
+}
+
+.modal-screen-center {
+
 }
